# homework1

./: CMakeLists.txt  README.md  fkin_1x.cpp  main_1x.cpp  tests.cpp
include/: fkin_1x.hpp
